--- a/blacksea.html
+++ b/blacksea.html
@@ -57,7 +57,7 @@
 			<div class="aframebox">
 
 			    <!--Aframe Assets-->
-	    		<a-scene stats embedded cursor="rayOrigin: mouse">
+	    		<a-scene embedded cursor="rayOrigin: mouse">
 		      	
 		      	<a-assets>
 			        <img id="skyTexture" src="images/places.jpg">
